--- a/backend/main/templates/main/index.html
+++ b/backend/main/templates/main/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'main/css/index.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'main/css/bootstrap.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'main/css/index.css' %}" type="text/css">
 </head>
 
-<body>
+<body class="bg">
 
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary m-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button type="button" class="btn btn-primary btn-lg m-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Учёт ДС
     </button>
 
