--- a/backend/main/templates/main/index.html
+++ b/backend/main/templates/main/index.html
@@ -18,11 +18,6 @@
       Учёт ДС
     </button>
 
-<!--    <form method="post">-->
-<!--        {% csrf_token %}-->
-<!--        {{form.as_p}}-->
-<!--        <input type="submit" value="Create">-->
-<!--    </form>-->
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -69,12 +64,9 @@
                 <div class="row mb-4">
                     <h5>Финансовые данные</h5>
                     <div class="col">
-                        <label for="form_payment">Форма оплаты *</label>
-                        <select id="form_payment" name="index" class="form-select" aria-label="Default select example">
+                        <label for="formPayment">Форма оплаты *</label>
+                        <select id="formPayment" name="index" class="form-select" aria-label="Default select example">
                             <option selected>Выберите одно из меню</option>
-                            {% for form_payment in form_payments %}
-                                <option value="{{ form_payment.pk }}">{{ form_payment.name }}</option>
-                            {% endfor %}
                         </select>
                     </div>
 
@@ -84,12 +76,9 @@
                     </div>
 
                     <div class="col">
-                        <label for="legal_entity">Юр. лицо *</label>
-                        <select id="legal_entity" name="index" class="form-select" aria-label="Default select example">
+                        <label for="legalEntity">Юр. лицо *</label>
+                        <select id="legalEntity" name="index" class="form-select" aria-label="Default select example">
                             <option selected>Выберите одно из меню</option>
-                            {% for legal_entity in legal_entities %}
-                                <option value="{{ legal_entity.pk }}">{{ legal_entity.name }}</option>
-                            {% endfor %}
                         </select>
                     </div>
                 </div>
@@ -97,8 +86,8 @@
 
                 <div class="row mb-4">
                     <div class="col">
-                        <label for="incoming_outgoing">Приход / Расход *</label>
-                        <select id="incoming_outgoing" class="form-select" aria-label="Default select example">
+                        <label for="incomingOutgoing">Приход / Расход *</label>
+                        <select id="incomingOutgoing" class="form-select" aria-label="Default select example">
                             <option selected>Выберите одно из меню</option>
                         </select>
                     </div>
@@ -113,9 +102,6 @@
                         <label for="rc">Р/с *</label>
                         <select id="rc" name="index" class="form-select" aria-label="Default select example">
                             <option selected>Выберите одно из меню</option>
-                            {% for rc in rcs %}
-                                <option value="{{ rc.pk }}">{{ rc.name }}</option>
-                            {% endfor %}
                         </select>
                     </div>
                 </div>
@@ -162,8 +148,8 @@
                     </div>
 
                     <div class="col">
-                        <label for="contract_number">Номер договора</label>
-                        <select id="contract_number" class="form-select" aria-label="Default select example">
+                        <label for="contractNumber">Номер договора</label>
+                        <select id="contractNumber" class="form-select" aria-label="Default select example">
                             <option selected>Выберите одно из меню</option>
                         </select>
                     </div>
@@ -179,15 +165,15 @@
                     </div>
 
                     <div class="col">
-                        <label for="additional_params">Доп параметры *</label>
-                        <select id="additional_params" class="form-select" aria-label="Default select example">
+                        <label for="additionalParams">Доп параметры *</label>
+                        <select id="additionalParams" class="form-select" aria-label="Default select example">
                             <option selected>Выберите одно из меню</option>
                         </select>
                     </div>
 
                     <div class="col">
-                        <label for="from_client">Откуда клиент</label>
-                        <select id="from_client" class="form-select" aria-label="Default select example">
+                        <label for="fromClient">Откуда клиент</label>
+                        <select id="fromClient" class="form-select" aria-label="Default select example">
                             <option selected>Выберите одно из меню</option>
                         </select>
                     </div>
@@ -207,8 +193,10 @@
     </div>
 
 
-    <script type="text/javascript" src="{% static 'main/js/bootstrap.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="{% static 'main/js/index.js' %}"></script>
+    <script type="text/javascript" src="{% static 'main/js/bootstrap.js' %}"></script>
+
 </body>
 
 </html>
