add: added dropdown list changed ui

--- a/backend/main/templates/main/index.html
+++ b/backend/main/templates/main/index.html
@@ -34,7 +34,7 @@
 
 
                 <div class="row mb-4">
-                    <h5>Дата транзакции</h5>
+                    <h5 class="center">Дата транзакции</h5>
                     <div class="col">
                         <label for="date_transaction">Выбери дату транзакции</label>
                         <input class="form-control" type="date" id="date_transaction" name="trip-start"/>
@@ -43,7 +43,7 @@
 
 
                 <div class="row mb-4">
-                    <h5>Направление бизнеса</h5>
+                    <h5 class="center">Направление бизнеса</h5>
                     <div class="col">
                         <label for="business">Выбери какой бизнес *</label>
                         <select id="business" name="index" data-type="formPayment" class="form-select select" aria-label="Default select example">
@@ -62,7 +62,7 @@
 
 
                 <div class="row mb-4">
-                    <h5>Финансовые данные</h5>
+                    <h5 class="center">Финансовые данные</h5>
                     <div class="col">
                         <label for="formPayment">Форма оплаты *</label>
                         <select id="formPayment" name="index" data-type="legalEntity" class="form-select select" aria-label="Default select example">
@@ -108,7 +108,7 @@
 
 
                 <div class="row mb-4">
-                    <h5>Учетные данные</h5>
+                    <h5 class="center">Учетные данные</h5>
                     <div class="col">
                         <label for="view">Вид *</label>
                         <select id="view" class="form-select" aria-label="Default select example">
