add: changed ui

--- a/backend/main/templates/main/index.html
+++ b/backend/main/templates/main/index.html
@@ -37,7 +37,7 @@
                     <h5 class="center">Дата транзакции</h5>
                     <div class="col">
                         <label for="date_transaction">Выбери дату транзакции</label>
-                        <input class="form-control" type="date" id="date_transaction" name="date_transaction"/>
+                        <input class="form-control" type="date" id="date_transaction" name="dateTransaction"/>
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
 
                     <div class="col">
                         <label for="accounting_date">Дата учета</label>
-                        <input class="form-control" type="date" id="accounting_date" name="accounting_date"/>
+                        <input class="form-control" type="date" id="accounting_date" name="accountingDate"/>
                     </div>
                 </div>
 
