add: changed ui

--- a/backend/main/templates/main/index.html
+++ b/backend/main/templates/main/index.html
@@ -25,7 +25,7 @@
         <div class="modal-content" style="background-color: rgba(0, 0, 0, 0.3);">
 
           <div class="modal-header">
-            <h1 class="modal-title fs-3 text-center" style="margin: auto" id="exampleModalLabel">Финансовый учет компаний</h1>
+            <h1 class="modal-title text-center" style="margin: auto" id="exampleModalLabel">Финансовый учет компаний</h1>
             <button type="button" style="margin: 0" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
 
